# website

./: .editorconfig  .env  .env.example  .eslintcache  .gitignore  .huskyrc  .prettierignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  app.tsx  deploy.sh  docker-compose.yml  heroku_build.ts  import_map.json  index.html  nuxt.config.js  package-lock.json  package.json  sailfish.yml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
.husky/: pre-commit  pre-push
.next/server/: pages-manifest.json
assets/scss/: fonts.scss  global.scss  main.scss  scrollbar.scss  variables.scss
assets/templates/: app.stpl
components/: Header.tsx  Layout.tsx  Navigation.vue  ProjectCard.tsx  RequestError.tsx  icon.tsx  layout.tsx  navigation.tsx
components/atoms/: TaskBarWorkspaces.tsx  button.tsx  icon.tsx
components/molecules/: TaskBarLeft.tsx  alert.tsx  changeThemeButton.tsx
components/organisms/: TaskBar.tsx  header.tsx
components/templates/: default.tsx
layouts/: default.vue
pages/: 404.tsx  _app.tsx  _document.tsx  about.vue  index.tsx  index.vue  projects.tsx
pages/api/: projects.ts
public/: index.html  opensearch.xml
public/fonts/: Inter.css  JetBrainsMono.css  Lato.css
public/posts/: text_post.md  welcome.md
src/: App.tsx  App.vue  main.rs  main.ts  routes.rs  template.rs  templates.rs  utils.rs
src/@types/: layout.d.ts  project.d.ts
static/: manifest.json
style/: fonts.css  tailwind.css
styles/: fonts.scss  main.scss  variables.scss
(+65 files in other folders)
