[package]
name = "website"
version = "0.1.0"
description = "This is personal website write in rust"
license = "GPL-3.0"
authors = ["Jheyson Saavedra <JheysonDev@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
grass = "0.10.4"
sailfish = "0.3.1"
